--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,14 @@
               "node_modules/owl.carousel/dist/owl.carousel.min.js",
               "node_modules/select2/dist/js/select2.min.js"
             ],
-            "es5BrowserSupport": true
+            "es5BrowserSupport": true,
+            "aot": false,
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
@@ -64,7 +71,8 @@
                 }
               ]
             }
-          }
+          },
+          "defaultConfiguration": ""
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
